--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -20,7 +20,7 @@ html {
 
 body {
     height: 100%;
-    background: radial-gradient($primary-color-dark, rgba($primary-color-light, .8)) no-repeat;
+    background: radial-gradient(rgba($primary-color-light, 1), rgba($primary-color-light, .6)) no-repeat;
     font-family: "B Homa", "B Yekan";
     color: $text-color;
 }
@@ -30,91 +30,4 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
-
-.login-form {
-    border-right: 1px solid $secondary-color-dark;
-    padding: 0 15px;
-}
-
-.login-text {
-    line-height: 4.5rem;
-    text-align: center;
-    text-shadow: 1px 1px 5px rgba(#000, 0.3);
-}
-
-.login-label {
-    margin-right: 12px;
-    transform: translateY(15%);
-    color: $error-color;
-    opacity: 0;
-    transition: opacity .2s ease-in-out;
-
-    &-show {
-        opacity: 1;
-    }
-}
-
-.login-form-group {
-    margin: 0;
-
-    &:not(:last-child) {
-        margin-bottom: 20px;
-    }
-
-    &-btn {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-    }
-}
-
-.login-input {
-    &::placeholder {
-        color: inherit;
-        opacity: 1;
-    }
-
-    border-color: #ced4da;
-    transition: border-color .2s ease-in-out;
-    box-shadow: 2px 2px 8px rgba(#000, 0.3);
-
-    &-error {
-        animation: inputbg 1s ease-in-out 5;
-    }
-}
-@keyframes inputbg {
-    0% {
-        border-color: rgba($error-color, 0.1);
-    }
-    50% {
-        border-color: rgba($error-color, 0.8);
-    }
-    100% {
-        border-color: rgba($error-color, 0.1);
-    }
-}
-
-.login-btn {
-    background-color: $secondary-color-dark;
-    color: $text-color;
-    width: 100%;
-    height: 100%;
-    box-shadow: 2px 2px 8px rgba(#000, 0.3);
-}
-
-.error-list {
-    margin: 10px;
-    color: $error-color;
-
-    li {
-        list-style: none;
-        text-shadow: 1px 1px 5px rgba(#000, 0.3);
-        opacity: 0;
-        transition: opacity .3s ease-in-out;
-
-        &.show {
-            opacity: 1;
-        }
-    }
 }
