--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,11 +1,66 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-align: right;
+}
+
+html {
+  height: 100%;
+  width: 100%;
+  direction: rtl;
+}
+
+body {
+  height: 100%;
+  background: radial-gradient(#116466, rgba(17, 100, 102, 0.6)) no-repeat;
+  font-family: "B Homa", "B Yekan";
+  color: #D1E8E2;
+}
+
+.abs-middle {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 .container {
   height: 100%;
 }
 
 header {
-  background-color: #fff;
+  text-align: left;
   width: 100%;
   height: 100%;
+  border-bottom: 1px solid rgba(255, 203, 154, 0.8);
+}
+
+footer {
+  width: 100%;
+  height: 100%;
+  border-top: 1px solid rgba(255, 203, 154, 0.8);
+}
+
+.customers, .orders {
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 203, 154, 0.6);
+  border-radius: 5px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.username {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: fit-content;
+  text-align: left;
+  padding: 3px;
+  border-radius: 5px;
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+  font-stretch: wider;
+  margin-right: 570px;
 }
 
 /*# sourceMappingURL=home.css.map */
