--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,10 +1,40 @@
+@import 'main.scss';
+
 .container {
     height: 100%;
 }
 
 
 header {
-    background-color: #fff;
+    text-align: left;
     width: 100%;
     height: 100%;
+    border-bottom: 1px solid rgba($secondary-color-light, .8);
+}
+
+footer {
+    width: 100%;
+    height: 100%;
+    border-top: 1px solid rgba($secondary-color-light, .8);
+}
+
+.customers, .orders {
+    height: 100%;
+    width: 100%;
+    background-color: rgba($secondary-color-light, .6);
+    border-radius: 5px;
+    box-shadow: 4px 4px 8px rgba(#000, .3);
+}
+
+.username {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    width: fit-content;
+    text-align: left;
+    padding: 3px;
+    border-radius: 5px;
+    text-shadow: 1px 1px 5px rgba(#000, 0.3);
+    font-stretch: wider;
+    margin-right: 570px;
 }
