--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -43,12 +43,67 @@ footer {
 }
 
 .customers, .orders {
+  position: relative;
   height: 100%;
   width: 100%;
   background-color: rgba(255, 203, 154, 0.6);
   border-radius: 5px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
   overflow: hidden;
+}
+.customers div.edit-customer, .orders div.edit-customer {
+  background-color: rgba(44, 53, 49, 0.6);
+  position: absolute;
+  height: 0%;
+  width: 100%;
+  bottom: 0;
+  transition: height 0.5s ease-in-out;
+  z-index: 5;
+}
+.customers div.edit-customer::before, .orders div.edit-customer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 203, 154, 0.6);
+}
+.customers div.edit-customer-show, .orders div.edit-customer-show {
+  height: 100%;
+}
+.customers .add-btn, .orders .add-btn {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 50%);
+  width: 50px;
+  height: 50px;
+  background-color: rgba(255, 203, 154, 0.6);
+  border-radius: 50%;
+  z-index: 6;
+}
+.customers .add-btn:hover, .orders .add-btn:hover {
+  cursor: pointer;
+}
+.customers .add-btn:before, .orders .add-btn:before {
+  content: "";
+  position: absolute;
+  background-color: #D1E8E2;
+  left: 50%;
+  transform: translate(-50%, 70%) rotate(45deg);
+  width: 2px;
+  height: 12px;
+  background-color: #fff;
+}
+.customers .add-btn:after, .orders .add-btn:after {
+  content: "";
+  position: absolute;
+  background-color: #D1E8E2;
+  left: 50%;
+  transform: translate(-50%, 70%) rotate(135deg);
+  width: 2px;
+  height: 12px;
+  background-color: #fff;
 }
 .customers .list-group, .orders .list-group {
   height: 100%;
@@ -59,16 +114,18 @@ footer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   background-color: transparent;
   text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
   border: none;
+  padding: 12px 15px;
   font-size: 95%;
   transition: all 0.5s ease-in-out;
 }
 .customers .list-group .list-group-item:not(:last-child), .orders .list-group .list-group-item:not(:last-child) {
   border-bottom: 1px solid #D1E8E2;
 }
-.customers .list-group .list-group-item:hover p, .orders .list-group .list-group-item:hover p {
+.customers .list-group .list-group-item:hover, .orders .list-group .list-group-item:hover {
   cursor: pointer;
   color: rgba(44, 53, 49, 0.5);
   text-shadow: 1px 1px 5px rgba(209, 232, 226, 0.2);
@@ -77,6 +134,43 @@ footer {
   color: rgba(44, 53, 49, 0.5);
   text-shadow: 1px 1px 5px rgba(209, 232, 226, 0.2);
   background-color: rgba(255, 203, 154, 0.5);
+}
+.customers .list-group .list-group-item p, .orders .list-group .list-group-item p {
+  margin: 0;
+}
+.customers .list-group .list-group-item div, .orders .list-group .list-group-item div {
+  display: block;
+  height: 2px;
+  width: 15px;
+  background-color: #fff;
+  border-radius: 5px;
+  position: relative;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+  transition: all 0.4s ease-in-out;
+  opacity: 0;
+}
+.customers .list-group .list-group-item div.show, .orders .list-group .list-group-item div.show {
+  opacity: 1;
+}
+.customers .list-group .list-group-item div:hover, .orders .list-group .list-group-item div:hover {
+  transform: scale(1.1);
+}
+.customers .list-group .list-group-item div::before, .customers .list-group .list-group-item div::after, .orders .list-group .list-group-item div::before, .orders .list-group .list-group-item div::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 2px;
+  width: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+}
+.customers .list-group .list-group-item div::before, .orders .list-group .list-group-item div::before {
+  top: -300%;
+}
+.customers .list-group .list-group-item div::after, .orders .list-group .list-group-item div::after {
+  top: 300%;
 }
 
 .username {
