--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -19,12 +19,74 @@ footer {
 }
 
 .customers, .orders {
+    position: relative;
     height: 100%;
     width: 100%;
     background-color: rgba($secondary-color-light, .6);
     border-radius: 5px;
     box-shadow: 4px 4px 8px rgba(#000, .3);
     overflow: hidden;
+
+    div.edit-customer {
+        background-color: rgba($primary-color-dark, .6);
+        position: absolute;
+        height: 0%;
+        width: 100%;
+        bottom: 0;
+        transition: height .5s ease-in-out;
+        z-index: 5;
+        
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba($secondary-color-light, .6);
+        }
+
+        &-show {
+            height: 100%;
+        }
+    }
+
+    .add-btn {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        width: 50px;
+        height: 50px;
+        background-color: rgba($secondary-color-light, .6);
+        border-radius: 50%;
+        z-index: 6;
+
+        &:hover {
+            cursor: pointer;
+        }
+
+        &:before {
+            content: '';
+            position: absolute;
+            background-color: $text-color;
+            left: 50%;
+            transform: translate(-50%, 70%) rotate(45deg);
+            width: 2px;
+            height: 12px;
+            background-color: #fff;
+        }
+
+        &:after {
+            content: '';
+            position: absolute;
+            background-color: $text-color;
+            left: 50%;
+            transform: translate(-50%, 70%) rotate(135deg);
+            width: 2px;
+            height: 12px;
+            background-color: #fff;
+        }
+    }
 
     .list-group {
         height: 100%;
@@ -35,9 +97,11 @@ footer {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+            align-items: center;
             background-color: transparent;
             text-shadow: 1px 1px 5px rgba(#000, 0.3);
             border: none;
+            padding: 12px 15px;
             font-size: 95%;
             transition: all .5s ease-in-out;
             
@@ -45,7 +109,7 @@ footer {
                 border-bottom: 1px solid $text-color;
             }
 
-            &:hover p {
+            &:hover {
                 cursor: pointer;
                 color: rgba($primary-color-dark, .5);
                 text-shadow: 1px 1px 5px rgba($text-color, .2);
@@ -54,8 +118,52 @@ footer {
             &-active {
                 color: rgba($primary-color-dark, .5);
                 text-shadow: 1px 1px 5px rgba($text-color, .2);
-                // border-bottom: transparent !important;
                 background-color: rgba($secondary-color-light, .5);
+            }
+
+            p {
+                margin: 0;
+            }
+
+            div {
+                display: block;
+                height: 2px;
+                width: 15px;
+                background-color: #fff;
+                border-radius: 5px;
+                position: relative;
+                box-shadow: 2px 2px 8px rgba(#000, 0.3);
+                transition: all .4s ease-in-out;
+                opacity: 0;
+
+                &.show {
+                    // display: block;
+                    opacity: 1;
+                }
+
+                &:hover {
+                    transform: scale(1.1);
+                }
+
+                &::before, &::after {
+                    content: '';
+                    position: absolute;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    height: 2px;
+                    width: 20px;
+                    background-color: #fff;
+                    border-radius: 5px;
+                    box-shadow: 2px 2px 8px rgba(#000, 0.3);
+                }
+
+                &::before {
+                    top: -300%;
+                }
+
+                &::after {
+                    top: 300%;
+                }
             }
         }
     }
