--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -60,6 +60,7 @@ footer {
         background-color: rgba($secondary-color-light, .6);
         border-radius: 50%;
         z-index: 6;
+        transition: background .5s ease-in-out;
 
         &:hover {
             cursor: pointer;
@@ -70,10 +71,11 @@ footer {
             position: absolute;
             background-color: $text-color;
             left: 50%;
-            transform: translate(-50%, 70%) rotate(45deg);
+            transform: translate(-50%, 70%);
             width: 2px;
             height: 12px;
             background-color: #fff;
+            transition: transform .5s ease-in-out;
         }
 
         &:after {
@@ -81,10 +83,23 @@ footer {
             position: absolute;
             background-color: $text-color;
             left: 50%;
-            transform: translate(-50%, 70%) rotate(135deg);
+            transform: translate(-50%, 70%) rotate(90deg);
             width: 2px;
             height: 12px;
             background-color: #fff;
+            transition: transform .5s ease-in-out;
+        }
+
+        &-close {
+            background: rgba($primary-color-dark, .3);;
+
+            &:before {
+                transform: translate(-50%, 70%) rotate(45deg);
+            }
+
+            &:after {
+                transform: translate(-50%, 70%) rotate(135deg);
+            }
         }
     }
 
