--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -18,35 +18,103 @@ footer {
     border-top: 1px solid rgba($secondary-color-light, .8);
 }
 
-.customers, .orders {
+.orders {
     position: relative;
     height: 100%;
     width: 100%;
-    background-color: rgba($secondary-color-light, .6);
+    background-color: rgba($secondary-color-light, .2);
+    border-radius: 5px;
+    box-shadow: 4px 4px 8px rgba(#000, .3);
+    overflow: hidden;
+}
+
+.customers {
+    position: relative;
+    height: 100%;
+    width: 100%;
+    background-color: rgba($secondary-color-light, .2);
     border-radius: 5px;
     box-shadow: 4px 4px 8px rgba(#000, .3);
     overflow: hidden;
 
     div.edit-customer {
-        background-color: rgba($primary-color-dark, .6);
+        background-color: rgba($primary-color-light, 1);
         position: absolute;
         height: 0%;
         width: 100%;
         bottom: 0;
         transition: height .5s ease-in-out;
         z-index: 5;
-        
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba($secondary-color-light, .6);
-        }
 
         &-show {
             height: 100%;
+        }
+
+        .customer-form {
+            z-index: 8;
+            padding: 20px;
+            height: 100%;
+            overflow: scroll;
+
+            &::-webkit-scrollbar {
+                display: none;
+            }
+
+            .form-group {
+                position: relative;
+                height: 70px;
+                font-size: 90%;
+
+                label {
+                    position: absolute;
+                    top: 50%;
+                    color: $primary-color-dark;
+                    margin-right: 12px;
+                    cursor: text;
+                    transition: all .5s ease-in-out;
+                }
+
+                .form-input {
+                    position: absolute;
+                    top: 40%;
+                    border: transparent;
+                    color: $primary-color-dark;
+                    font-size: 1rem;
+                    font-weight: 300;
+                    line-height: 1.5;
+                    box-shadow: 4px 4px 8px rgba(#000, .3);
+                    width: 100%;
+                    padding: 7px 14px;
+                    // margin: 0 10px 0 5px;
+                    border-radius: 20px;
+                    transition: all .3s ease-in-out;
+
+                    &:not(:placeholder-shown) {
+                        & ~ label {
+                            top: 0;
+                            opacity: 1;
+                            color: $text-color;
+                            text-shadow: 2px 2px 5px rgba(#000, 0.3);
+                        }
+                    }
+
+                    &:focus {
+                        outline: transparent;
+                        box-shadow: 6px 6px 8px rgba(#000, .6);
+
+                        & ~ label {
+                            opacity: 1;
+                            top: 0;
+                            color: $text-color;
+                            text-shadow: 2px 2px 5px rgba(#000, 0.3);
+                        }
+                    }
+
+                    &::placeholder {
+                        opacity: 0;   
+                    }
+                }
+            }
         }
     }
 
