--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,7 @@
 $primary-color-dark: #2C3531;
 $primary-color-light: #116466;
-$secondary-color-dark: #D9B08C;
-$secondary-color-light: #FFCB9A;
+$secondary-color-dark: #df9656;
+$secondary-color-light: #cca580;
 $text-color: #D1E8E2;
 $error-color: #ff3c3c;
 
