--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -26,7 +26,7 @@ body {
 }
 
 .login-form {
-  border-right: 1px solid #D9B08C;
+  border-right: 1px solid #df9656;
   padding: 0 15px;
 }
 
@@ -84,7 +84,7 @@ body {
   }
 }
 .login-btn {
-  background-color: #D9B08C;
+  background-color: #df9656;
   color: #D1E8E2;
   width: 100%;
   height: 100%;
