--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -52,9 +52,14 @@ footer {
 
         .customer-form {
             z-index: 8;
-            padding: 20px;
+            padding: 10px 20px 30px 20px;
             height: 100%;
             overflow: scroll;
+
+            h5 {
+                padding: 15px;
+                border-bottom: 1px solid rgba($secondary-color-light, .8);
+            }
 
             &::-webkit-scrollbar {
                 display: none;
@@ -85,7 +90,6 @@ footer {
                     box-shadow: 4px 4px 8px rgba(#000, .3);
                     width: 100%;
                     padding: 7px 14px;
-                    // margin: 0 10px 0 5px;
                     border-radius: 20px;
                     transition: all .3s ease-in-out;
 
