--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -37,7 +37,7 @@ footer {
     box-shadow: 4px 4px 8px rgba(#000, .3);
     overflow: hidden;
 
-    div.edit-customer {
+    div.new-customer {
         background-color: rgba($primary-color-light, 1);
         position: absolute;
         height: 0%;
@@ -58,12 +58,14 @@ footer {
 
             .header {
                 display: flex;
+                margin-bottom: 15px;
                 justify-content: space-between;
                 align-items: center;
                 border-bottom: 1px solid rgba($secondary-color-light, .8);
 
                 h5 {
                     padding: 15px;
+                    margin: 0;
                 }
 
                 img {
@@ -74,64 +76,53 @@ footer {
             &::-webkit-scrollbar {
                 display: none;
             }
+        }
+    }
 
-            .form-group {
-                position: relative;
-                height: 70px;
-                font-size: 90%;
+    div.edit-customer {
+        background-color: rgba($primary-color-light, 1);
+        position: absolute;
+        height: 0px;
+        width: 0px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 3;
+        overflow: hidden;
+        border-radius: 50%;
+        transition: height .5s ease-in-out, width .5s ease-in-out, border-radius .5s ease-in-out;
 
-                label {
-                    position: absolute;
-                    top: 50%;
-                    color: $primary-color-dark;
-                    margin-right: 12px;
-                    cursor: text;
-                    transition: all .5s ease-in-out;
+        &-show {
+            height: 100%;
+            width: 100%;
+            border-radius: 0;
+        }
+
+        .customer-form-edit {
+            z-index: 8;
+            padding: 10px 20px 30px 20px;
+            height: 100%;
+            overflow: scroll;
+
+            .header {
+                display: flex;
+                margin-bottom: 15px;
+                justify-content: space-between;
+                align-items: center;
+                border-bottom: 1px solid rgba($secondary-color-light, .8);
+
+                h5 {
+                    padding: 15px;
+                    margin: 0;
                 }
 
-                .form-input {
-                    position: absolute;
-                    top: 40%;
-                    border: 1px solid transparent;
-                    color: $primary-color-dark;
-                    font-size: 1rem;
-                    font-weight: 200;
-                    line-height: 1.5;
-                    box-shadow: 4px 4px 8px rgba(#000, .3);
-                    width: 100%;
-                    padding: 7px 14px;
-                    border-radius: 20px;
-                    transition: all .3s ease-in-out;
-
-                    &:not(:placeholder-shown) {
-                        & ~ label {
-                            top: 0;
-                            opacity: 1;
-                            color: $text-color;
-                            text-shadow: 2px 2px 5px rgba(#000, 0.3);
-                        }
-                    }
-
-                    &:focus {
-                        outline: transparent;
-                        box-shadow: 6px 6px 8px rgba(#000, .6);
-
-                        & ~ label {
-                            opacity: 1;
-                            top: 0;
-                            color: $text-color;
-                            text-shadow: 2px 2px 5px rgba(#000, 0.3);
-                        }
-                    }
-
-                    &:invalid {
-                        border: 1px solid $error-color;
-                    }
-
-                    &::placeholder {
-                        opacity: 0;   
-                    }
+                img {
+                    cursor: pointer;
                 }
+            }
+
+            &::-webkit-scrollbar {
+                display: none;
             }
         }
     }
@@ -227,7 +218,7 @@ footer {
             }
 
             div {
-                display: block;
+                visibility: hidden;
                 height: 2px;
                 width: 15px;
                 background-color: #fff;
@@ -238,7 +229,7 @@ footer {
                 opacity: 0;
 
                 &.show {
-                    // display: block;
+                    visibility: visible;
                     opacity: 1;
                 }
 
