--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -27,6 +27,15 @@ body {
 
 .container {
   height: 100%;
+  position: relative;
+}
+.container .delete-customer-confirmation {
+  position: absolute;
+  height: 30%;
+  width: 50%;
+  background-color: #fff;
+  z-index: 100;
+  visibility: hidden;
 }
 
 header {
@@ -92,6 +101,7 @@ footer {
 }
 .customers div.new-customer .customer-form .header img {
   cursor: pointer;
+  padding: 15px;
 }
 .customers div.new-customer .customer-form::-webkit-scrollbar {
   display: none;
