--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -29,14 +29,6 @@ body {
   height: 100%;
   position: relative;
 }
-.container .delete-customer-confirmation {
-  position: absolute;
-  height: 30%;
-  width: 50%;
-  background-color: #fff;
-  z-index: 100;
-  visibility: hidden;
-}
 
 header {
   text-align: left;
@@ -100,8 +92,8 @@ footer {
   margin: 0;
 }
 .customers div.new-customer .customer-form .header img {
-  cursor: pointer;
   padding: 15px;
+  cursor: pointer;
 }
 .customers div.new-customer .customer-form::-webkit-scrollbar {
   display: none;
@@ -109,16 +101,16 @@ footer {
 .customers div.edit-customer {
   background-color: #116466;
   position: absolute;
-  height: 100%;
-  width: 0px;
+  height: 0%;
+  width: 100%;
   top: 0;
   left: 0;
   z-index: 3;
   overflow: hidden;
-  transition: width 0.5s ease-in-out;
+  transition: height 0.5s ease-in-out;
 }
 .customers div.edit-customer-show {
-  width: 100%;
+  height: 100%;
 }
 .customers div.edit-customer .customer-form-edit {
   z-index: 8;
@@ -226,24 +218,29 @@ footer {
   margin: 0;
 }
 .customers .list-group .list-group-item div {
+  height: 16px;
+  width: fit-content;
   visibility: hidden;
-  height: 2px;
-  width: 15px;
-  background-color: #fff;
-  border-radius: 5px;
-  position: relative;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
-  transition: all 0.4s ease-in-out;
   opacity: 0;
+  transition: all 0.4s ease-in-out;
 }
 .customers .list-group .list-group-item div.show {
   visibility: visible;
   opacity: 1;
 }
-.customers .list-group .list-group-item div:hover {
-  transform: scale(1.1);
+.customers .list-group .list-group-item div div {
+  height: 2px;
+  width: 15px;
+  background-color: #fff;
+  border-radius: 5px;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+  opacity: inherit;
+  visibility: inherit;
 }
-.customers .list-group .list-group-item div::before, .customers .list-group .list-group-item div::after {
+.customers .list-group .list-group-item div div::before, .customers .list-group .list-group-item div div::after {
   content: "";
   position: absolute;
   left: 50%;
@@ -254,10 +251,10 @@ footer {
   border-radius: 5px;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
 }
-.customers .list-group .list-group-item div::before {
+.customers .list-group .list-group-item div div::before {
   top: -300%;
 }
-.customers .list-group .list-group-item div::after {
+.customers .list-group .list-group-item div div::after {
   top: 300%;
 }
 
