--- a/assets/scss/component.scss
+++ b/assets/scss/component.scss
@@ -88,3 +88,53 @@
         }
     }
 }
+
+.popup {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(#000, .5);
+    z-index: 100;
+    visibility: hidden;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+
+    &-show {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    &-box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        height: 40%;
+        width: 50%;
+        background-color: rgba($primary-color-light, .9);
+        border-radius: 5px;
+        padding: 20px;
+
+        &-title {
+            height: 30%;
+            width: 100%;
+            padding: 15px;
+            border-bottom: 1px solid $secondary-color-light;
+        }
+
+        &-content {
+            height: 40%;
+            width: 100%;
+            padding: 15px;
+        }
+
+        &-footer {
+            height: 30%;
+            width: 100%;
+            border-top: 1px solid $secondary-color-light;
+            padding: 15px;
+        }
+    }
+}
