--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -3,16 +3,6 @@
 .container {
     height: 100%;
     position: relative;
-
-
-    .delete-customer-confirmation {
-        position: absolute;
-        height: 30%;
-        width: 50%;
-        background-color: #fff;
-        z-index: 100;
-        visibility: hidden;
-    }
 }
 
 
@@ -80,8 +70,8 @@ footer {
                 }
 
                 img {
-                    cursor: pointer;
                     padding: 15px;
+                    cursor: pointer;
                 }
             }
 
@@ -94,16 +84,16 @@ footer {
     div.edit-customer {
         background-color: rgba($primary-color-light, 1);
         position: absolute;
-        height: 100%;
-        width: 0px;
+        height: 0%;
+        width: 100%;
         top: 0;
         left: 0;
         z-index: 3;
         overflow: hidden;
-        transition: width .5s ease-in-out;
+        transition: height .5s ease-in-out;
 
         &-show {
-            width: 100%;
+            height: 100%;
         }
 
         .customer-form-edit {
@@ -230,43 +220,48 @@ footer {
             }
 
             div {
+                height: 16px;
+                width: fit-content;
                 visibility: hidden;
-                height: 2px;
-                width: 15px;
-                background-color: #fff;
-                border-radius: 5px;
-                position: relative;
-                box-shadow: 2px 2px 8px rgba(#000, 0.3);
-                transition: all .4s ease-in-out;
                 opacity: 0;
+                transition: all .4s ease-in-out;
 
                 &.show {
                     visibility: visible;
                     opacity: 1;
                 }
 
-                &:hover {
-                    transform: scale(1.1);
-                }
-
-                &::before, &::after {
-                    content: '';
-                    position: absolute;
-                    left: 50%;
-                    transform: translateX(-50%);
+                div {    
                     height: 2px;
-                    width: 20px;
+                    width: 15px;
                     background-color: #fff;
                     border-radius: 5px;
+                    position: relative;
+                    top: 50%;
+                    transform: translateY(-50%);
                     box-shadow: 2px 2px 8px rgba(#000, 0.3);
-                }
+                    opacity: inherit;
+                    visibility: inherit;
+                    
+                    &::before, &::after {
+                        content: '';
+                        position: absolute;
+                        left: 50%;
+                        transform: translateX(-50%);
+                        height: 2px;
+                        width: 20px;
+                        background-color: #fff;
+                        border-radius: 5px;
+                        box-shadow: 2px 2px 8px rgba(#000, 0.3);
+                    }
 
-                &::before {
-                    top: -300%;
-                }
+                    &::before {
+                        top: -300%;
+                    }
 
-                &::after {
-                    top: 300%;
+                    &::after {
+                        top: 300%;
+                    }
                 }
             }
         }
